k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ats-service
spec:
  type: LoadBalancer
  selector:
    app: ats-resume
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
