k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ats-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ats.yourdomain.com
    http:
      paths:
      - path: /
